@@ -75,6 +75,7 @@ Verilator 5.039 devel
 * Fix `--stats` overridden by skipping identical build (#6220). [Geza Lore]
 * Fix MODDUP with duplicate packages to take first package (#6222).
 * Fix replicate with unsigned count but MSB set (#6231) (#6233). [Geza Lore]
+* Fix randomize on function-local variable (#6234).
 * Fix queue typedef with unbounded slice (#6236).
 * Fix error when force assignment is used with ref function args (#6244). [Ryszard Rozak, Antmicro Ltd.]
 * Fix write of 0 in '%c' (#6248) (#6249). [Rodrigo Batista de Moraes]
